--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # AWS User-specific
 .idea/**/aws.xml
 
-# Generated files
+# Generated files fgfgfg
 .idea/**/contentModel.xml
 
 # Sensitive or high-churn files
